--- a/package.json
+++ b/package.json
@@ -5,18 +5,29 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.6.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "20.1.3",
     "@nx/eslint-plugin": "20.1.3",
     "@nx/jest": "20.1.3",
     "@nx/js": "20.1.3",
+    "@nx/nest": "^20.1.3",
+    "@nx/node": "20.1.3",
     "@nx/react": "20.1.3",
     "@nx/vite": "20.1.3",
     "@nx/web": "20.1.3",
+    "@nx/webpack": "20.1.3",
     "@nx/workspace": "20.1.3",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
@@ -28,6 +39,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
@@ -39,6 +51,7 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "20.1.3",
     "postcss": "8.4.38",
@@ -50,6 +63,7 @@
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   }
 }
