--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+
+*.sqlite3
+*.sqlite
+database/dev.sqlite3
+
 # compiled output
 dist
 tmp
