--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/mapped-types": "^2.0.6",
+    "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.2",
     "@pulseboard/source": "file:",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "mongoose": "^8.8.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
