--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
@@ -12,6 +13,7 @@
     "classnames": "^2.5.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "zustand": "^5.0.1"
