--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@pulseboard/shared": ["libs/shared/src/index.ts"]
+      "@pulseboard/shared": ["libs/shared/src/index.ts"],
+      "@pulseboard/widgets": ["libs/shared/widgets/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
