--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^8.0.7",
     "@pulseboard/source": "file:",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "lucide-react": "^0.461.0",
     "mongoose": "^8.8.2",
     "react": "18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
