--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
-    "axios": "^1.6.0",
+    "axios": "^1.7.8",
     "lucide-react": "^0.460.0",
     "nx": "^20.1.3",
     "react": "18.3.1",
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
+    "@nestjs/swagger": "^8.0.7",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "20.1.3",
     "@nx/eslint-plugin": "20.1.3",
