--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "sqlite": "^5.1.1"
+    "sqlite": "^5.1.1",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
