--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@pulseboard/source": "file:",
     "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.6.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.460.0",
     "react": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "sqlite": "^5.1.1"
@@ -46,6 +48,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
